--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <p>
+    Battle of the Ages
+  </p>
+  <p> in the console.log</p>
   <script src="./classes/LivingThing.js"></script>
   <script src="./classes/Monster.js"></script>
   <script src="./classes/Hero.js"></script>
